[package]
name = "istress"
version = "0.1.0"
edition = "2021"
authors = ["iStress Contributors"]
description = "A CLI tool for stress testing Apple Silicon MacBooks"
license = "MIT"
repository = "https://github.com/jscontrino/istress"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
metal = "0.29"
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
rayon = "1.10"
chrono = "0.4"

[dev-dependencies]
mockall = "0.13"
